k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-phase-1-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: order.tech-challenge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-phase-1-api-service
                port:
                  number: 80
